--- a/stories/no/0004_geit-hund-og-ku_slides.html
+++ b/stories/no/0004_geit-hund-og-ku_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
-<p>Ku betalte litt ekstra fordi han ikke hadde akkurat med penger.</p>
+<p>Hund betalte litt ekstra fordi han ikke hadde akkurat med penger.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
-<p>Sjåføren var på vei til å gi Hund sin veksel, da Geit stakk av uten å betale.</p>
+<p>Sjåføren var på vei til å gi Hund vekslepengene, da Geit stakk av uten å betale.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
-<p>Sjåføren ble veldig irritert. Han kjørte avgårde uten å gi tilbake Hunds veksel.</p>
+<p>Sjåføren ble veldig irritert. Han kjørte av gårde uten å gi tilbake Hunds vekslepenger.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
-<p>Det er derfor at Hund, selv i dag, løper mot biler for å sjekke om han sersjåføren som skylder ham veksel.</p>
+<p>Det er derfor Hund, selv i dag, løper mot biler for å sjekke om han ser sjåføren som skylder ham vekslepenger.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
-<p>Geit stikker når han hører en bil. Hun er redd for at hun vil bli arrestert for ikke å ha betalt billetten.</p>
+<p>Geit stikker når hun hører en bil. Hun er redd for at hun vil bli arrestert for ikke å ha betalt billetten.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
-<p>Og Ku bryr seg ikke når det kommer en bil. Ku bruker god tid når han krysser veien, fordi hun vet at hun betalte hele billetten sin.</p>
+<p>Og Ku bryr seg ikke når det kommer en bil. Ku bruker god tid når hun krysser veien fordi hun vet at hun betalte hele billetten sin.</p>
 <center>
 <strong>8</strong>
 </center>
