--- a/stories/no/0006_anansi-og-visdommen_slides.html
+++ b/stories/no/0006_anansi-og-visdommen_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
-<p>For lenge lenge siden visste ikke folk noen ting. De visste ikke hvordan man dyrket jorda, de kunne ikke veve tøy eller lage redskaper av jern. All verdens visdom eide bare guden Nyame i himmelen. Og han gjemte på den i en leirkrukke.</p>
+<p>For lenge, lenge siden visste ikke folk noen ting. De visste ikke hvordan man dyrket jorda, de kunne ikke veve tøy eller lage redskaper av jern. All verdens visdom eide bare guden Nyame i himmelen. Og han gjemte på den i en leirkrukke.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
-<p>Den lille sønnen til Anansi hadde stått og sett på ved foten av treet. &quot;Hadde det ikke vært lettere å klatre med krukka på ryggen istedet?&quot; sa han. Anansi prøvde å binde fast leirkrukka full av visdom på ryggen. Og da ble det jo mye lettere.</p>
+<p>Den lille sønnen til Anansi hadde stått og sett på ved foten av treet. &quot;Hadde det ikke vært lettere å klatre med krukka på ryggen i stedet?&quot; sa han. Anansi prøvde å binde fast leirkrukka full av visdom på ryggen. Og da ble det jo mye lettere.</p>
 <center>
 <strong>4</strong>
 </center>
