--- a/stories/no/0052_simbegwire.html
+++ b/stories/no/0052_simbegwire.html
@@ -84,7 +84,7 @@ Rukia Nantale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
 
-<p>Ting ble bare værre for Simbegwire. Hvis hun ikke gjorde ferdig husarbeidet, eller klagde, slo Anita henne. Og under middagen spiste Anita det meste av maten, slik at Simbegwire bare fikk noen få rester. Hver natt gråt Simbegwire til hun falt i søvn mens hun klemte rundt teppet fra moren sin.</p>
+<p>Ting ble bare verre for Simbegwire. Hvis hun ikke gjorde ferdig husarbeidet, eller klagde, slo Anita henne. Og under middagen spiste Anita det meste av maten, slik at Simbegwire bare fikk noen få rester. Hver natt gråt Simbegwire til hun falt i søvn mens hun klemte rundt teppet fra moren sin.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -98,14 +98,15 @@ Rukia Nantale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
 
-<p>Simbegwire var veldig opprørt. Hun bestemte seg for å rømme. Hun tok bitene fra morens teppe, pakket litt mat, og dro avgårde. Hun fulgte den samme veien som faren hennes hadde tatt.</p>
+<p>Simbegwire var veldig opprørt. Hun bestemte seg for å rømme. Hun tok bitene fra morens teppe, pakket litt mat, og dro av 
+gårde. Hun fulgte den samme veien som faren hennes hadde tatt.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
 
-<p>Da kvelden kom klatret hun opp i et høyt tre  ved en bekk og redde seg en seng i grenene. Da hun gikk og la seg, sang hun: “mamma, mamma, mamma, du forlot meg. Du forlot meg og kom aldri tilbake. Pappa er ikke glad i meg lenger. Mamma, når kommer du tilbake? Du forlot meg.”</p>
+<p>Da kvelden kom klatret hun opp i et høyt tre ved en bekk og redde seg en seng i grenene. Da hun gikk og la seg, sang hun: “mamma, mamma, mamma, du forlot meg. Du forlot meg og kom aldri tilbake. Pappa er ikke glad i meg lenger. Mamma, når kommer du tilbake? Du forlot meg.”</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -154,7 +155,7 @@ Rukia Nantale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
 
-<p>Neste uke inviterte Anita Simbegwire, sammen med fetterene, kusinene, og tanta, hjem til seg for et måltid. For en fest! Anita lagde alle yndlingsrettene til Simbegwire, og alle spiste til de var gode og mette. Deretter lekte barna mens de voksne snakket. Simbegwire følte seg glad og modig. Hun bestemte seg for at snart, veldig snart, skulle hun flytte hjem og bo med faren og stemoren sin.</p>
+<p>Neste uke inviterte Anita Simbegwire, sammen med fetterne, kusinene, og tanta, hjem til seg for et måltid. For en fest! Anita lagde alle yndlingsrettene til Simbegwire, og alle spiste til de var gode og mette. Deretter lekte barna mens de voksne snakket. Simbegwire følte seg glad og modig. Hun bestemte seg for at snart, veldig snart, skulle hun flytte hjem og bo med faren og stemoren sin.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
