--- a/stories/no/0141_hønemor-og-tusenbein_slides.html
+++ b/stories/no/0141_hønemor-og-tusenbein_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
-<p>Så lagde de en straffekonkurranse. Først var Tusenbein keeper. Hønemor skårte bare ett mål. Så var det Hønemors tur til å forsvare målet.</p>
+<p>Så lagde de en straffekonkurranse. Først var Tusenbein keeper. Hønemor skåret bare ett mål. Så var det Hønemors tur til å forsvare målet.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
-<p>Tusenbein sparket ballen og skårte. Tusenbein driblet ballen og skårte. Tusenbein headet ballen og skårte. Fem mål skårte Tusenbein.</p>
+<p>Tusenbein sparket ballen og skåret. Tusenbein driblet ballen og skåret. Tusenbein headet ballen og skåret. Fem mål skåret Tusenbein.</p>
 <center>
 <strong>4</strong>
 </center>
