--- a/stories/no/0201_eselbarnet_slides.html
+++ b/stories/no/0201_eselbarnet_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Straff - Global African Storybook</title>
+  <title>Eselbarnet - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="straff" class="slide level1">
-<h1>Straff</h1>
+<section id="eselbarnet" class="slide level1">
+<h1>Eselbarnet</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
-<p>En dag fikk mamma mye frukt.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/02.jpg" /></p>
+<p>Det var en liten jente som først så den mystiske skikkelsen i det fjerne.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
-<p>&quot;Når kan vi få litt frukt?&quot; spør vi. &quot;Vi spiser frukten i kveld.&quot; sier mamma.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/03.jpg" /></p>
+<p>Etter hvert som skikkelsen kom nærmere, så hun at det var en høygravid kvinne.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
-<p>Broren min Rahim er grådig. Han smaker på all frukten. Han spiser mye av den.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
+<p>Sjenert men modig gikk den lille jenta nærmere kvinnen. &quot;Vi må beholde henne her hos oss,&quot; bestemte de som var med den lille jenta. &quot;Vi skal beskytte henne og barnet hennes.&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>&quot;Se hva Rahim gjorde,&quot; roper lillebroren min. &quot;Rahim er slem og egoistisk,&quot; sier jeg.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/05.jpg" /></p>
+<p>Barnet var snart på vei. &quot;Dytt!&quot; &quot;Hent pledd!&quot; &quot;Vann!&quot; &quot;Dyyyytt!&quot;</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
-<p>Mamma er sint på Rahim.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/06.jpg" /></p>
+<p>Men da de fikk se babyen, vek alle tilbake i sjokk. &quot;Et esel?&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
-<p>Vi er også sinte på Rahim. Men Rahim er ikke lei seg.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
+<p>Alle sammen begynte å krangle. &quot;Vi sa vi skulle beskytte mor og barn, og det skal vi gjøre,&quot; sa noen. Men de kommer til å bringe ulykke!&quot; sa andre.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
-<p>&quot;Skal du ikke straffe Rahim?&quot; spør lillebror.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/08.jpg" /></p>
+<p>Og slik var det at kvinnen ble alene igjen. Hun lurte på hva hun skulle gjøre med dette rare barnet. Hun lurte på hva hun skulle gjøre med seg selv.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
-<p>&quot;Rahim, du kommer til å angre snart,&quot; advarer mamma.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/09.jpg" /></p>
+<p>Men til slutt aksepterte hun at han var hennes barn og at hun var moren hans.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
-<p>Rahim begynner å føle seg uvel.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
+<p>Hvis bare barnet hadde beholdt den lille størrelsen, hadde alt kanskje vært annerledes. Men eselbarnet vokste og vokste helt til han ikke lenger fikk plass på morens rygg. Og uansett hvor hardt hand forsøkte, klarte han ikke å oppføre seg som et menneske. Moren hans for ofte sliten og frustrert. Noen gang satte hun ham til å gjøre arbeid som var ment for dyr.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
-<p>&quot;Jeg har så vondt i magen,&quot; hvisker Rahim.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
+<p>Esel ble fylt av forvirring og sinne. Han kunne ikke gjør ditt og han kunne ikke gjøre datt. Han kunne ikke være på én måte og han kunne ikke være på en annen måte. Han ble så sint at han én dag sparket ned huset til moren sin.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
-<p>Mamma visste at dette ville skje. Frukten straffer Rahim.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/12.jpg" /></p>
+<p>Esel skammet seg. Han begynte å løpe vekk så fort han kunne.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
-<p>Senere sier Rahim unnskyld til oss. &quot;Jeg skal aldri være så grådig igjen,&quot; lover han. Vi tror ham alle sammen.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
+<p>Når han hadde sluttet å løpe, var det blitt kveld, og Esel hadde gått seg vill. &quot;Vrinsk&quot; visket han inn i mørket. &quot;Vrinsk?&quot; lød ekkoet. Han var alene. Han krøket seg sammen til en liten ball og falt i en dyp og forstyrret søvn.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,12 +204,84 @@
 </section>
 <section class="slide level1">
 
-<h2 id="straff-1">Straff</h2>
-<strong>Tekst:</strong> Adelheid Marie Bwire<br> <strong>Illustrasjoner:</strong> Melany Pietersen<br> <strong>Oversettelse:</strong> Olav Sigmond<br> <strong>Språk:</strong> norsk<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/14.jpg" /></p>
+<p>Esel våknet opp til en merkelig gammel mann som stirret ned på ham. Han så inn i den gamle mannens øyne og begynte å kjenne en snev av håp.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/15.jpg" /></p>
+<p>Esel dro for å bo med den gamle mannen, som lærte ham mange forskjellige måter å overleve på. Esel lyttet og lærte, og det gjorde den gamle mannen også. De hjalp hverandre og de lo sammen.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/16.jpg" /></p>
+<p>En morgen ba den gamle mannen Esel om å bære ham opp til toppen av et fjell.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
+<p>Høyt oppe blant skyene sovnet de. Esel drømte at moren hans var syk og kallet på ham. Og da han våknet ...</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/18.jpg" /></p>
+<p>... hadde skyene forsvunnet, i likhet med vennen hans, den gamle mannen.</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/19.jpg" /></p>
+<p>Esel visste omsider hva han skulle gjøre.</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
+<p>Esel fant moren sin som var alene og sørget tapet av barnet sitt. De stirret på hverandre lenge. Og så klemte de hverandre veldig hardt.</p>
+<center>
+<strong>19</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/21.jpg" /></p>
+<p>Eselbarnet og moren hans har utviklet seg i fellesskap og funnet mange måter å leve side ved side.</p>
+<center>
+<strong>20</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="eselbarnet-1">Eselbarnet</h2>
+<strong>Tekst:</strong> Lindiwe Matshikiza<br> <strong>Illustrasjoner:</strong> Meghan Judge<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
 <p>
 Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
 <p>
-Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/punishment'>her</a>
+Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/donkey-child'>her</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
