--- a/stories/no/0006_anansi-og-visdommen.html
+++ b/stories/no/0006_anansi-og-visdommen.html
@@ -49,7 +49,7 @@ Ghanaian folktale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
 
-<p>For lenge lenge siden visste ikke folk noen ting. De visste ikke hvordan man dyrket jorda, de kunne ikke veve tøy eller lage redskaper av jern. All verdens visdom eide bare guden Nyame i himmelen. Og han gjemte på den i en leirkrukke.</p>
+<p>For lenge, lenge siden visste ikke folk noen ting. De visste ikke hvordan man dyrket jorda, de kunne ikke veve tøy eller lage redskaper av jern. All verdens visdom eide bare guden Nyame i himmelen. Og han gjemte på den i en leirkrukke.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -70,7 +70,7 @@ Ghanaian folktale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
 
-<p>Den lille sønnen til Anansi hadde stått og sett på ved foten av treet. “Hadde det ikke vært lettere å klatre med krukka på ryggen istedet?” sa han. Anansi prøvde å binde fast leirkrukka full av visdom på ryggen. Og da ble det jo mye lettere.</p>
+<p>Den lille sønnen til Anansi hadde stått og sett på ved foten av treet. “Hadde det ikke vært lettere å klatre med krukka på ryggen i stedet?” sa han. Anansi prøvde å binde fast leirkrukka full av visdom på ryggen. Og da ble det jo mye lettere.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
