--- a/stories/no/0027_avgjørelse.html
+++ b/stories/no/0027_avgjørelse.html
@@ -49,7 +49,7 @@ Ursula Nafula<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
 
-<p>Landsbyen min hadde mange problemer. Vi dannet en lang rekke for for å hente vann fra en pumpe.</p>
+<p>Landsbyen min hadde mange problemer. Vi dannet en lang rekke for å hente vann fra en pumpe.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -154,7 +154,7 @@ Ursula Nafula<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
 
-<p>Vi ropte alle sammen med én stemme: “Må må forandre livene våre.” Fra den dagen samarbeidet vi for å løse problemene våre.</p>
+<p>Vi ropte alle sammen med én stemme: “Vi må forandre livene våre.” Fra den dagen samarbeidet vi for å løse problemene våre.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
