--- a/stories/no/0027_avgjørelse_slides.html
+++ b/stories/no/0027_avgjørelse_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
-<p>Landsbyen min hadde mange problemer. Vi dannet en lang rekke for for å hente vann fra en pumpe.</p>
+<p>Landsbyen min hadde mange problemer. Vi dannet en lang rekke for å hente vann fra en pumpe.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
-<p>Vi ropte alle sammen med én stemme: &quot;Må må forandre livene våre.&quot; Fra den dagen samarbeidet vi for å løse problemene våre.</p>
+<p>Vi ropte alle sammen med én stemme: &quot;Vi må forandre livene våre.&quot; Fra den dagen samarbeidet vi for å løse problemene våre.</p>
 <center>
 <strong>16</strong>
 </center>
