--- a/stories/no/0052_simbegwire_slides.html
+++ b/stories/no/0052_simbegwire_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
-<p>Ting ble bare værre for Simbegwire. Hvis hun ikke gjorde ferdig husarbeidet, eller klagde, slo Anita henne. Og under middagen spiste Anita det meste av maten, slik at Simbegwire bare fikk noen få rester. Hver natt gråt Simbegwire til hun falt i søvn mens hun klemte rundt teppet fra moren sin.</p>
+<p>Ting ble bare verre for Simbegwire. Hvis hun ikke gjorde ferdig husarbeidet, eller klagde, slo Anita henne. Og under middagen spiste Anita det meste av maten, slik at Simbegwire bare fikk noen få rester. Hver natt gråt Simbegwire til hun falt i søvn mens hun klemte rundt teppet fra moren sin.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
-<p>Simbegwire var veldig opprørt. Hun bestemte seg for å rømme. Hun tok bitene fra morens teppe, pakket litt mat, og dro avgårde. Hun fulgte den samme veien som faren hennes hadde tatt.</p>
+<p>Simbegwire var veldig opprørt. Hun bestemte seg for å rømme. Hun tok bitene fra morens teppe, pakket litt mat, og dro av gårde. Hun fulgte den samme veien som faren hennes hadde tatt.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
-<p>Neste uke inviterte Anita Simbegwire, sammen med fetterene, kusinene, og tanta, hjem til seg for et måltid. For en fest! Anita lagde alle yndlingsrettene til Simbegwire, og alle spiste til de var gode og mette. Deretter lekte barna mens de voksne snakket. Simbegwire følte seg glad og modig. Hun bestemte seg for at snart, veldig snart, skulle hun flytte hjem og bo med faren og stemoren sin.</p>
+<p>Neste uke inviterte Anita Simbegwire, sammen med fetterne, kusinene, og tanta, hjem til seg for et måltid. For en fest! Anita lagde alle yndlingsrettene til Simbegwire, og alle spiste til de var gode og mette. Deretter lekte barna mens de voksne snakket. Simbegwire følte seg glad og modig. Hun bestemte seg for at snart, veldig snart, skulle hun flytte hjem og bo med faren og stemoren sin.</p>
 <center>
 <strong>16</strong>
 </center>
