--- a/stories/no/0095_zama-er-flink_slides.html
+++ b/stories/no/0095_zama-er-flink_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>Mamma påminner, “Glem ikke tennene.” Jeg svarer: &quot;Aldri, ikke jeg!&quot;</p>
+<p>Mamma påminner, &quot;Glem ikke tennene.&quot; Jeg svarer: &quot;Aldri, ikke jeg!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
