--- a/stories/no/0141_hønemor-og-tusenbein.html
+++ b/stories/no/0141_hønemor-og-tusenbein.html
@@ -63,14 +63,14 @@ Winny Asara<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
 
-<p>Så lagde de en straffekonkurranse. Først var Tusenbein keeper. Hønemor skårte bare ett mål. Så var det Hønemors tur til å forsvare målet.</p>
+<p>Så lagde de en straffekonkurranse. Først var Tusenbein keeper. Hønemor skåret bare ett mål. Så var det Hønemors tur til å forsvare målet.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
 
-<p>Tusenbein sparket ballen og skårte. Tusenbein driblet ballen og skårte. Tusenbein headet ballen og skårte. Fem mål skårte Tusenbein.</p>
+<p>Tusenbein sparket ballen og skåret. Tusenbein driblet ballen og skåret. Tusenbein headet ballen og skåret. Fem mål skåret Tusenbein.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -98,8 +98,7 @@ Winny Asara<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
 
-<p>Så hørte Mor Tusenbein en svak stemme: “Mamma, hjelp meg!”. Mor Tusenbein så seg rundt og lyttet spent. 
-Lyden kom fra inni høna.</p>
+<p>Så hørte Mor Tusenbein en svak stemme: “Mamma, hjelp meg!”. Mor Tusenbein så seg rundt og lyttet spent. Lyden kom fra inni høna.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
