--- a/stories/no/0243_på-ferie-hos-bestemor_slides.html
+++ b/stories/no/0243_på-ferie-hos-bestemor_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
-<p>Odongo og Aipyo bodde i byen med faren sin. De så frem til ferien. Ikke bare fordi skolen var slutt, men fordi de skulle besøke bestemoren sin. Hun bodde i en fiskelandsby nær en stor sjø.</p>
+<p>Odongo og Apiyo bodde i byen med faren sin. De så frem til ferien. Ikke bare fordi skolen var slutt, men fordi de skulle besøke bestemoren sin. Hun bodde i en fiskelandsby nær en stor sjø.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
-<p>Odongo og Apiyo var begeistret fordi de var på tide å besøke bestemor igjen. Kvelden før pakket de veskene sine og gjorde seg klare for den lange reisen til landsbyen hennes. De fikk ikke sove og de snakket hele natten om feiren.</p>
+<p>Odongo og Apiyo var begeistret fordi de var på tide å besøke bestemor igjen. Kvelden før pakket de veskene sine og gjorde seg klare for den lange reisen til landsbyen hennes. De fikk ikke sove og de snakket hele natten om ferien.</p>
 <center>
 <strong>2</strong>
 </center>
