--- a/stories/no/0294_bestemors-bananer_slides.html
+++ b/stories/no/0294_bestemors-bananer_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Straff - Global African Storybook</title>
+  <title>Bestemors bananer - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="straff" class="slide level1">
-<h1>Straff</h1>
+<section id="bestemors-bananer" class="slide level1">
+<h1>Bestemors bananer</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
-<p>En dag fikk mamma mye frukt.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
+<p>Bestemors kjøkkenhage var full av durra, hirse og kassava. Men best av alt var bananene. Selv om bestemor hadde mange barnebarn, visst jeg i all hemmelighet at jeg var favoritten hennes. Hun inviterte meg ofte hjem til seg. Hun fortalte meg også små hemmeligheter. Men det var én hemmelighet hun ikke delte med meg: hvor hun modnet bananene.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
-<p>&quot;Når kan vi få litt frukt?&quot; spør vi. &quot;Vi spiser frukten i kveld.&quot; sier mamma.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
+<p>En dag så jeg en stor stråkurv som stod plassert utenfor huset til bestemor. Da jeg spurte hva den var ment for, fikk jeg svaret: &quot;Det er den magiske kurven min.&quot; Ved siden av kurven var det flere bananblader som bestemor snudde fra tid til annen. Jeg var nysgjerrig: &quot;Hva bruker du bladene til, bestemor?&quot; spurte jeg. Det eneste svaret jeg fikk, var: &quot;De er de magiske bladene mine.&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
-<p>Broren min Rahim er grådig. Han smaker på all frukten. Han spiser mye av den.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
+<p>Det var så interessant å se på bestemor, bananene, bananbladene og den store stråkurven. Men bestemor sendte meg av gårde to mamma for et ærend. &quot;Bestemor, vær så snill, la meg få se på mens for forbereder...&quot; &quot;Ikke vær så sta, jenta mi, gjør det du har blitt bedt om,&quot; insisterte hun. Jeg sprang av gårde.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>&quot;Se hva Rahim gjorde,&quot; roper lillebroren min. &quot;Rahim er slem og egoistisk,&quot; sier jeg.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
+<p>Da jeg kom tilbake, satt bestemor utenfor, men med verken kurven eller bananene. &quot;Bestemor, hvor er kurven, hvor er bananene, og hvor...&quot; Men det eneste svaret jeg fikk, var: &quot;De er på det magiske stedet mitt.&quot; Det var så skuffende!</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
-<p>Mamma er sint på Rahim.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
+<p>To dager senere ba bestemor meg om å hente stokken hennes fra soverommet. Så snart jeg åpnet døra ble jeg møtt av den sterke lukten av modne bananer. I det innerste rommet var bestemors store magiske stråkurv. Den var godt gjemt av et gammelt teppe. Jeg løftet det og luktet på den vidunderlige duften.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
-<p>Vi er også sinte på Rahim. Men Rahim er ikke lei seg.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
+<p>Bestemors stemme skremte meg da hun ropte: &quot;Hva holder på med?&quot; &quot;Skynd deg og ta med stokken.&quot; jeg skyndte meg ut med stokken hennes. &quot;Hva er det du smiler for?&quot; spurte bestemor. Spørsmålet hennes fikk meg til å innse at jeg fortsatt smilte over oppdagelsen av det magiske stedet hennes.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
-<p>&quot;Skal du ikke straffe Rahim?&quot; spør lillebror.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
+<p>Neste dag da bestemor kom for å besøke moren min, skyndte jeg meg av gårde til huset hennes for å sjekke bananene en gang til. Det var en klase veldig modne bananer der. Jeg tok én og gjemte den i kjolen min. Etter at jeg hadde dekket kurven, gikk jeg bak huset og spiste den fort. Det var den søteste bananen jeg noensinne hadde smakt.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
-<p>&quot;Rahim, du kommer til å angre snart,&quot; advarer mamma.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
+<p>Neste dag mens bestemor var i kjøkkenhagen og plukket grønnsaker, snek jeg meg inn og tittet på bananene. Nesten alle var modne. Jeg kunne ikke la være å ta en klase med fire. I det jeg listet meg mot døra, hørte jeg bestemor hoste utenfor. Jeg rakk så vidt å gjemme bananene under kjolen og gikk forbi henne.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
-<p>Rahim begynner å føle seg uvel.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
+<p>Neste dag var det markedsdag. Bestemor stod opp tidlig. Hun tok alltid med modne bananer og kassava for å selge på markedet. Jeg skyndte meg ikke for å besøke henne den dagen. Men jeg kunne ikke unnvike henne veldig lenge.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
-<p>&quot;Jeg har så vondt i magen,&quot; hvisker Rahim.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
+<p>Senere den kvelden sendte mor, far og bestemor budt etter meg. Jeg visste hvorfor. Den natten da jeg la meg til å sove, visste jeg at jeg ikke kunne stjele igjen, ikke fra bestemor, ikke fra foreldrene mine, og definitivt ikke fra noen andre.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,30 +186,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
-<p>Mamma visste at dette ville skje. Frukten straffer Rahim.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
-<p>Senere sier Rahim unnskyld til oss. &quot;Jeg skal aldri være så grådig igjen,&quot; lover han. Vi tror ham alle sammen.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="straff-1">Straff</h2>
-<strong>Tekst:</strong> Adelheid Marie Bwire<br> <strong>Illustrasjoner:</strong> Melany Pietersen<br> <strong>Oversettelse:</strong> Olav Sigmond<br> <strong>Språk:</strong> norsk<br>
+<h2 id="bestemors-bananer-1">Bestemors bananer</h2>
+<strong>Tekst:</strong> Ursula Nafula<br> <strong>Illustrasjoner:</strong> Catherine Groenewald<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
 <p>
 Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
 <p>
-Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/punishment'>her</a>
+Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/grandma%E2%80%99s-bananas'>her</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
