--- a/stories/no/0296_bananselgeren-tom.html
+++ b/stories/no/0296_bananselgeren-tom.html
@@ -77,28 +77,28 @@ Humphreys Odunga<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
 
-<p>“Her omkring er det bare kvinner som selger frukt”, sier folk. “Hva slags mann er dette?” spør folk.</p>
+<p>“Her omkring er det bare kvinner som selger frukt,” sier folk. “Hva slags mann er dette?” spør folk.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
 
-<p>Men Tom gir ikke opp. Han roper, “Kjøp mine bananer! Kjøp mine søte modne bananer!”</p>
+<p>Men Tom gir ikke opp. Han roper: “Kjøp mine bananer! Kjøp mine søte, modne bananer!”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
 
-<p>En kvinne plukker en klynge bananer fra kassen. Hun ser nøye på bananene.</p>
+<p>En kvinne plukker en klase bananer fra kassen. Hun ser nøye på bananene.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
 
-<p>Kvinnen kjøper bananer.</p>
+<p>Kvinnen kjøper bananene.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Humphreys Odunga<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
 
-<p>Kassen blir fort tom. Tom teller pengene som han har tjent.</p>
+<p>Kassen blir fort tom. Tom teller pengene han har tjent.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
