--- a/stories/no/0296_bananselgeren-tom_slides.html
+++ b/stories/no/0296_bananselgeren-tom_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
-<p>&quot;Her omkring er det bare kvinner som selger frukt&quot;, sier folk. &quot;Hva slags mann er dette?&quot; spør folk.</p>
+<p>&quot;Her omkring er det bare kvinner som selger frukt,&quot; sier folk. &quot;Hva slags mann er dette?&quot; spør folk.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
-<p>Men Tom gir ikke opp. Han roper, &quot;Kjøp mine bananer! Kjøp mine søte modne bananer!&quot;</p>
+<p>Men Tom gir ikke opp. Han roper: &quot;Kjøp mine bananer! Kjøp mine søte, modne bananer!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
-<p>En kvinne plukker en klynge bananer fra kassen. Hun ser nøye på bananene.</p>
+<p>En kvinne plukker en klase bananer fra kassen. Hun ser nøye på bananene.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
-<p>Kvinnen kjøper bananer.</p>
+<p>Kvinnen kjøper bananene.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
-<p>Kassen blir fort tom. Tom teller pengene som han har tjent.</p>
+<p>Kassen blir fort tom. Tom teller pengene han har tjent.</p>
 <center>
 <strong>10</strong>
 </center>
