--- a/stories/no/0315_sakimas-sang.html
+++ b/stories/no/0315_sakimas-sang.html
@@ -70,7 +70,7 @@ Ursula Nafula<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
 
-<p>Foreldrene til Sakima jobbet i huset til den rike mannen. De dro tidlig om morgenen og kom tilbake sent på kvelden. Sakima ble igjen sammen med lillesøstra si.</p>
+<p>Foreldrene til Sakima jobbet i huset til den rike mannen. De dro tidlig om morgenen og kom tilbake sent på kvelden. Sakima ble igjen sammen med lillesøstera si.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -91,14 +91,14 @@ Ursula Nafula<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
 
-<p>Sakima likte å synge for lillesøstra si, særlig hvis hun var sulten. Søstra hans pleide å høre på at han sang yndlingssangen sin. Hun beveget seg til den lindrende låten.</p>
+<p>Sakima likte å synge for lillesøstera si, særlig hvis hun var sulten. Søstera hans pleide å høre på at han sang yndlingssangen sin. Hun beveget seg til den lindrende låten.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
 
-<p>“Kan du synge den igjen og igjen, Sakima,” pleide søstra hans å be ham. Sakima aksepterte og sang den igjen og igjen.</p>
+<p>“Kan du synge den igjen og igjen, Sakima,” pleide søstera hans å be ham. Sakima aksepterte og sang den igjen og igjen.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -126,14 +126,14 @@ Ursula Nafula<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/13.jpg" /></p>
 
-<p>Likevel ga ikke Sakima opp. Lillesøstra hans støttet ham. Hun sa, “Sakimas sanger er lindrende når jeg er sulten. De kommer til å virke lindrende på den rike mannen også.”</p>
+<p>Likevel ga ikke Sakima opp. Lillesøstera hans støttet ham. Hun sa, “Sakimas sanger er lindrende når jeg er sulten. De kommer til å virke lindrende på den rike mannen også.”</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/14.jpg" /></p>
 
-<p>Neste dag ba Sakima lillesøstra si om å lede ham til huset til den rike mannen.</p>
+<p>Neste dag ba Sakima lillesøstera si om å lede ham til huset til den rike mannen.</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
