--- a/stories/no/0315_sakimas-sang_slides.html
+++ b/stories/no/0315_sakimas-sang_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
-<p>Foreldrene til Sakima jobbet i huset til den rike mannen. De dro tidlig om morgenen og kom tilbake sent på kvelden. Sakima ble igjen sammen med lillesøstra si.</p>
+<p>Foreldrene til Sakima jobbet i huset til den rike mannen. De dro tidlig om morgenen og kom tilbake sent på kvelden. Sakima ble igjen sammen med lillesøstera si.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
-<p>Sakima likte å synge for lillesøstra si, særlig hvis hun var sulten. Søstra hans pleide å høre på at han sang yndlingssangen sin. Hun beveget seg til den lindrende låten.</p>
+<p>Sakima likte å synge for lillesøstera si, særlig hvis hun var sulten. Søstera hans pleide å høre på at han sang yndlingssangen sin. Hun beveget seg til den lindrende låten.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
-<p>&quot;Kan du synge den igjen og igjen, Sakima,&quot; pleide søstra hans å be ham. Sakima aksepterte og sang den igjen og igjen.</p>
+<p>&quot;Kan du synge den igjen og igjen, Sakima,&quot; pleide søstera hans å be ham. Sakima aksepterte og sang den igjen og igjen.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/13.jpg" /></p>
-<p>Likevel ga ikke Sakima opp. Lillesøstra hans støttet ham. Hun sa, &quot;Sakimas sanger er lindrende når jeg er sulten. De kommer til å virke lindrende på den rike mannen også.&quot;</p>
+<p>Likevel ga ikke Sakima opp. Lillesøstera hans støttet ham. Hun sa, &quot;Sakimas sanger er lindrende når jeg er sulten. De kommer til å virke lindrende på den rike mannen også.&quot;</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/14.jpg" /></p>
-<p>Neste dag ba Sakima lillesøstra si om å lede ham til huset til den rike mannen.</p>
+<p>Neste dag ba Sakima lillesøstera si om å lede ham til huset til den rike mannen.</p>
 <center>
 <strong>13</strong>
 </center>
