--- a/stories/no/0342_straff.html
+++ b/stories/no/0342_straff.html
@@ -63,14 +63,14 @@ Adelheid Marie Bwire<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
 
-<p>Min bror Rahim er grådig. Han smaker på all frukten. Han spiser mye av den.</p>
+<p>Broren min Rahim er grådig. Han smaker på all frukten. Han spiser mye av den.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
 
-<p>“Se hva Rahim gjorde” roper lillebroren min. “Rahim er slem og egoistiisk” sier jeg.</p>
+<p>“Se hva Rahim gjorde,” roper lillebroren min. “Rahim er slem og egoistisk,” sier jeg.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -91,14 +91,14 @@ Adelheid Marie Bwire<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
 
-<p>“Skal du ikke strafffe Rahim?” spør lillebror.</p>
+<p>“Skal du ikke straffe Rahim?” spør lillebror.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
 
-<p>“Rahim. du vil snart angre” advarer mamma.</p>
+<p>“Rahim, du kommer til å angre snart,” advarer mamma.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Adelheid Marie Bwire<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
 
-<p>“Jeg har så vondt i magen” hvisker Rahim.</p>
+<p>“Jeg har så vondt i magen,” hvisker Rahim.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Adelheid Marie Bwire<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
 
-<p>Senere sier Rahim unnskyld til oss. “Jeg vil aldri være så grådig igjen” lover han. Vi tror ham alle sammen.</p>
+<p>Senere sier Rahim unnskyld til oss. “Jeg skal aldri være så grådig igjen,” lover han. Vi tror ham alle sammen.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
